# 2025fa-420-TheBlackHatters

./: .coderabbit.yaml  .gitignore  Faculty_model.py  LICENSE  README.md  faculty.py  faculty_cli.py  pyproject.toml  pytest.ini  schedule.json  test.py  test.txt  test_config.json
.github/: CODEOWNERS
.github/workflows/: main.yml  pullrequest.yaml  release.yaml
CLI/: __init__.py  chatbot_cli.py  course_cli.py  display_schedule.py  faculty_cli.py  lab_cli.py  main.py  meeting_pattern_cli.py  room_cli.py  test_cli.py  time_slot_cli.py  timeslots_cli.py
Controller/: chatbot_agent.py  controllerUtils.py  main_controller.py
Models/: ClassPattern_model.py  Course_model.py  Data_manager.py  Faculty_model.py  Labs_model.py  Room_model.py  Schedule.py  Time_slot_model.py  Timeslots_model.py  __init__.py  time_slot_model.py
Models/courses/: Course_model.py  test_course_model.py
Views/: chatbot_view.py  main_view.py
output/: blank_template.json  example.json  mainConfig.json  template.json  test_schedule.csv
template/: ConfigTemplate.json
tests/: test_controller.py
tests/Model_tests/: test_class_pattern_model.py  test_course_model.py  test_data_manager.py  test_faculty_model.py  test_labs_model.py  test_room_model.py  test_time_slot_model.py  test_timeslots_model.py
